# ultimate-local-ai

./: .env.example  .gitignore  README.md  activate.sh  beyond_rag.py  complete_cli.py  demo.py  fix_model.py  pyproject.toml  run.sh  setup.sh  simple_cli.py  ultimate_cli.py
.github/workflows/: ci.yml
scripts/: github_integration.py  quick_update.py  start_watcher.py
ultimate_local_ai/: __init__.py  main.py
ultimate_local_ai/core/: adaptive_controller.py
ultimate_local_ai/memory/: integrated_memory.py
ultimate_local_ai/rag/: realtime_rag.py
ultimate_local_ai/reasoning/: advanced_reasoning.py
