[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ultimate-local-ai"
version = "1.0.0"
description = "Ultimate Local AI CLI with adaptive intelligence, real-time RAG, and continuous learning"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Ultimate Local AI", email = "ultimate@local.ai"},
]
dependencies = [
    # Core framework
    "asyncio>=3.4.3",
    "aiohttp>=3.9.0",
    "httpx>=0.27.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    
    # CLI interface
    "typer[all]>=0.9.0",
    "rich>=13.7.0",
    "questionary>=2.0.0",
    
    # AI and ML
    "mlx>=0.16.0",
    "ollama>=0.1.0",
    "openai>=1.0.0",
    "transformers>=4.36.0",
    "torch>=2.1.0",
    "sentence-transformers>=2.2.0",
    "peft>=0.7.0",  # For LoRA
    
    # RAG and vector storage
    "chromadb>=0.4.0",
    "langchain>=0.1.0",
    "tiktoken>=0.6.0",
    "faiss-cpu>=1.7.4",
    
    # Memory and storage
    "sqlite-utils>=3.36.0",
    "redis>=5.0.0",
    "duckdb>=0.9.0",
    
    # Web and search
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "scrapy>=2.11.0",
    "newspaper3k>=0.2.8",
    
    # Natural language processing
    "spacy>=3.7.0",
    "nltk>=3.8.0",
    "textstat>=0.7.3",
    
    # Scientific computing
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "pandas>=2.1.0",
    
    # Monitoring and logging
    "loguru>=0.7.0",
    "psutil>=5.9.0",
    "prometheus-client>=0.19.0",
    
    # Background tasks
    "celery>=5.3.0",
    "apscheduler>=3.10.0",
    
    # File processing
    "python-magic>=0.4.27",
    "pillow>=10.0.0",
    "pypdf>=3.17.0",
    "python-docx>=1.1.0",
    
    # Git integration
    "gitpython>=3.1.40",
    
    # Security
    "cryptography>=41.0.0",
    "bcrypt>=4.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "mypy>=1.7.0",
    "ruff>=0.1.6",
    "pre-commit>=3.5.0",
    "isort>=5.12.0",
]

[project.scripts]
ultimate-ai = "ultimate_local_ai.main:main"
uai = "ultimate_local_ai.main:main"

[tool.hatch.build.targets.wheel]
packages = ["ultimate_local_ai"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "DTZ", "T10", "ISC", "ICN", "G", "PIE", "T20", "PT", "Q", "RSE", "RET", "SIM", "TID", "ARG", "PTH", "PL", "RUF"]
ignore = ["E501", "PLR0913", "PLR0915", "PLR2004"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=ultimate_local_ai --cov-report=term-missing --cov-report=html"